# autopack

./: README.md  autopack.spec  conda-lock.yml  pyproject.toml  tasks.py
.github/workflows/: build.yml  test.yml
src/autopack/: __init__.py  cost_field.py  cost_fields.py  data_model.py  default_commands.py  ergonomic_evaluation.py  gui_entrypoint.py  harness.py  harness_optimization.py  harness_setup.py  io.py  ips.py  optimization.py  postprocessing.py  problem_setup.py  test.py  utils.py  workflows.py
src/autopack/gui/: cost_field_vis.py  main_gui.py  select_path.py  visualisation.py
src/autopack/gui/visualisation_support/: design_selection.py  elements.py  plots.py
src/autopack/ips_communication/: ErgonomicEvaluation.ips  __init__.py  ips_class.py  ips_commands.py  ips_costfield.py  ips_environment.py  ips_optimization.py  lua_commands.py  test.py
src/autopack/ips_communication/lualib/: autopack.lua
src/autopack/lualib/: MessagePack.lua
tests/: conftest.py  test_data_model.py  test_ergonomic.py  test_gui.py  test_gui_integration.py  test_gui_units.py  test_harness_routing.py  test_integration.py  test_optimization.py  test_visualisation.py
tests/scenes/: simple_plate.harness_setup.json  simple_plate.ips  test1.stl  test2.stl  test3.stl  test_harness_setup.json  topology_feasible.ips  topology_infeasible.ips
