[project]
name = "autopack"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Anton Wiberg", email = "anton.wiberg@liu.se" },
  { name = "Olle Vidner", email = "olle.vidner@liu.se" },
]
dependencies = [
  "botorch", # Bayesian optimization
  "numpy",
]

[project.optional-dependencies]
dev = [
  "conda-lock",
  "hatch",
  "invoke",      # For task automation
  "ipykernel",   # For Jupyter notebooks in VSCode
  "pyinstaller",
  "pytest",
  "ruff",        # Code formatting
]

[project.urls]
Homepage = "https://github.com/designautomationlaboratory/autopack"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.conda-lock]
platforms = ["win-64"]
channels = ["pytorch", "nvidia", "conda-forge", "defaults"]

[tool.conda-lock.dependencies]
# Extra dependencies for conda-lock. *Only* add packages here if they
# are not available on PyPI.
7zip = "*"         # For packaging
pip = "*"
python = ">=3.9"
pytorch-cuda = "*"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [".github"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "src"]

[tool.ruff.isort]
known-first-party = ["autopack"]
